--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "yourOverflow",
   "version": "0.0.1",
   "dependencies": {
-    "connect": ">= 1.9.2","socket.io": ">= 0.9.0"
+    "connect": ">= 1.9.2",
+    "socket.io": ">= 0.9.0",
+    "node-uuid": ">= 1.4.0"
   }
 }
