--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "connect": ">= 1.9.2",
     "socket.io": ">= 0.9.0",
-    "node-uuid": ">= 1.4.0"
+    "node-uuid": ">= 1.4.0",
+    "underscore" : ">= 1.4.2"
   }
 }
