--- a/package.json
+++ b/package.json
@@ -6,5 +6,9 @@
     "socket.io": ">= 0.9.0",
     "node-uuid": ">= 1.4.0",
     "underscore" : ">= 1.4.2"
+  },
+  "engines": {
+    "node": "0.8.x",
+    "npm": "1.1.x"
   }
 }
